--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
+        "dompdf/dompdf": "^1.2",
         "easycorp/easyadmin-bundle": "^4.0",
         "sensio/framework-extra-bundle": "^6.2",
         "stripe/stripe-php": "^7.113",
