--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,7 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     STRIPE_KEY: '%env(STRIPE_KEY)%'
-    GOOGLE_API: '%env(GOOGLE_API)%'
+    GOOGLE_KEY: '%env(GOOGLE_KEY)%'
 
 services:
     # default configuration for services in *this* file
